# uk-parliament-data-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AddMissingTools.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_IMPROVEMENTS.md  IMPROVEMENTS.md  LICENSE  PROMPT_build.md  PROMPT_plan.md  README.md  loop.ps1  loop.sh  parliament.spec  pyproject.toml  verify_readme_rendering.py
.claude/commands/: parliament-research.md
.github/workflows/: build-exe.yml  ci.yml  publish.yml
config/: claude_desktop_config.json.example  vscode_mcp_config.json.example
docs/: CLI_PLAN.md  IMPROVEMENT_PLAN.md  PHASE1_QUICK_WINS.md  PHASE2_CODE_QUALITY.md  PHASE3_TESTING.md  PHASE4_DOCUMENTATION.md  PHASE5_ARCHITECTURE.md
pwa/: PLAN.md  package.json  vite.config.js
scripts/: build-exe.py  generate_api_metadata.py
specs/: agent-guidance-spec.md  cli-spec.md  improvement-spec.md  missing-tools-spec.md  python-migration-spec.md  v2-improvements-spec.md
src/uk_parliament_mcp/: __init__.py  __main__.py  config.py  http_client.py  pruning.py  resources.py  server.py  validators.py
src/uk_parliament_mcp/cli/: __init__.py  api.py  api_metadata.json  bills.py  committees.py  completion.py  composite.py  digest.py  formatters.py  guide.py  hansard.py  interests.py  legislation.py  live.py  main.py  members.py  pagination.py  procedures.py  questions.py  renderers.py  search.py  try_it.py  utils.py  votes.py  watch.py
src/uk_parliament_mcp/tools/: __init__.py  bills.py  committees.py  commons_votes.py  composite.py  core.py  erskine_may.py  hansard.py  interests.py  lords_votes.py  members.py  now.py  oral_questions.py  search.py  statutory_instruments.py  treaties.py  whatson.py  written_questions.py
tests/: __init__.py  conftest.py  test_http_client.py  test_performance.py  test_pruning.py  test_resources.py  test_search_tool.py
tests/test_cli/: conftest.py  test_api.py  test_bills.py  test_completion.py  test_composite.py  test_digest.py  test_formatters.py  test_live.py  test_main.py  test_members.py  test_my_mp.py  test_pagination.py  test_renderers.py  test_search.py  test_try_it.py  test_utils.py  test_watch.py
tests/test_tools/: __init__.py  test_bills.py  test_committees.py  test_commons_votes.py  test_composite.py  test_core.py  test_erskine_may.py  test_hansard.py  test_interests.py  test_lords_votes.py  test_members.py  test_now.py  test_oral_questions.py  test_statutory_instruments.py  test_treaties.py  test_whatson.py  test_written_questions.py
