[project]
name = "uk-parliament-mcp"
dynamic = ["version"]
description = "(Unofficial) UK Parliament MCP Server - bridges AI assistants with UK Parliament APIs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Chris Brooksbank" }
]
keywords = ["mcp", "parliament", "uk", "api", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/ChrisBrooksbank/uk-parliament-mcp-lab"
Repository = "https://github.com/ChrisBrooksbank/uk-parliament-mcp-lab"
Issues = "https://github.com/ChrisBrooksbank/uk-parliament-mcp-lab/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
uk-parliament-mcp = "uk_parliament_mcp.__main__:main"
parliament = "uk_parliament_mcp.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/uk_parliament_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/uk_parliament_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
# E501 ignored because tool descriptions use semantic format on single lines
# B008 ignored because Typer requires function calls (typer.Option/Argument) in defaults
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["uk_parliament_mcp"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=uk_parliament_mcp --cov-report=term-missing"

[tool.coverage.run]
source = ["src/uk_parliament_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
